assets/css/main.css
@font-face {
  font-family: "Raleway-Regular400";
  src: url("/assets/fonts/Raleway/static/Raleway-Regular.ttf");
}
@font-face {
  font-family: "Raleway-Medium500";
  src: url("/assets/fonts/Raleway/static/Raleway-Medium.ttf");
}
@font-face {
  font-family: "Respondent-Black";
  src: url("/assets/fonts/RespondentBlack.otf");
}
.test {
  background-color: yellow;
}

* {
  box-sizing: content-box;
  margin: 0;
  padding: 0;
  font-family: "Raleway-Regular400", sans-serif, "Avenir", Helvetica, Arial, sans-serif;
  font-size: 15px;
  letter-spacing: 0.03em;
  font-weight: 500;
  line-height: 20px;
  color: var(--lightest-slate);
}

/* body {
  background-color: black;
} */

.main {
  margin-top: -69px;
}

/* P{
  margin-bottom: 0;
  padding: 0;
} */
.p-tb {
  padding: 150px 0;
}

.subtitle-oil {
  font-size: 50px;
  color: var(--dark-oil);
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3960784314);
}

.subtitle-slate {
  font-size: 50px;
  color: var(--lightest-slate);
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3960784314);
}

.slate-txt {
  color: var(--lightest-slate);
}

.dark-oil-txt {
  color: var(--dark-oil);
}

.lightest-oil-txt {
  color: var(--lightest-oil);
}

.oil-txt {
  color: var(--oil);
}

.bg-dark-oil {
  background-color: var(--dark-oil);
}

.bg-lightest-oil {
  background-color: var(--lightest-oil);
}

.bg-oil {
  background-color: var(--oil);
}

.bg-lightest-slate {
  background-color: var(--lightest-slate);
}

.navy-shadow {
  box-shadow: 0px 9px 9px 2px rgba(0, 0, 0, 0.329);
}

.bs-inset {
  box-shadow: 0px 9px 9px 2px rgba(0, 0, 0, 0.329) inset;
}

.red {
  border: 2px solid red;
}

.green {
  border: 2px solid green;
}

.blue {
  border: 2px solid blue;
}

.yellow {
  border: 2px solid yellow;
}

.cyan {
  border: 2px solid cyan;
}

.purple {
  border: 2px solid purple;
}

.button {
  color: var(--lightest-slate);
  background-color: var(--green);
  /*   border: 1px solid var(--lightest-slate); */
  padding: 9px 14px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 14px;
  margin: 4px 2px;
  -webkit-transition-duration: 0.4s;
  /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
}
.button:hover {
  background-color: var(--lightest-oil);
  color: white;
}

.hg-container-padding {
  padding: 60px 0;
}

@media (max-width: 768px) {
  * {
    font-size: 13px;
  }

  .hg-container-height {
    height: auto;
  }

  /*   .main{
      margin: 0px;
    } */
  .subtitle-oil {
    font-size: 34px;
  }

  .subtitle-slate {
    font-size: 34px;
  }
}
.scrollReveal {
  opacity: 0;
  transition: all 0.9s;
}

.mostrarArriba {
  animation: mostrarArriba 1s;
}

@keyframes mostrarArriba {
  0% {
    transform: translateY(90px);
  }
  100% {
    transform: translateY(0);
  }
}
.myBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  border: none;
  outline: none;
  background-color: red;
  color: white;
  cursor: pointer;
  padding: 15px;
  border-radius: 4px;
}

:root {
  --dark-oil: #192430;
  --oil: #192430;
  --lightest-oil: #2c3e50;
  --lightest-slate: #f5f5f5;
  --hg-gold: #FFED69;
  --hg-gold-2: #756713;
  --green: #1da058;
  --blue-dark: #090f1b;
}

.hidden {
  display: none;
}

/* 
.centrado{
    height: 100vh;
    width: 100%;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--dark-oil);
    z-index: 111;
}
.lds-hourglass {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
}
.lds-hourglass:after {
    content: " ";
    display: block;
    border-radius: 50%;
    width: 0;
    height: 0;
    margin: 8px;
    box-sizing: border-box;
    border: 32px solid #fff;
    border-color: #fff transparent #fff transparent;
    animation: lds-hourglass 1.2s infinite;
}
@keyframes lds-hourglass {
    0% {
        transform: rotate(0);
        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
    }
    50% {
        transform: rotate(900deg);
        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }
    100% {
        transform: rotate(1800deg);
    }
}

*/
.loading {
  position: relative;
  top: 21%;
}
.loading .loading-image {
  width: 177px;
}

.disppear {
  animation: vanish 0.5s forwards;
}

@keyframes vanish {
  100% {
    opacity: 0;
    visibility: hidden;
  }
}
.cssload-container {
  position: absolute;
  width: 100%;
  height: 100vh;
  display: block;
  /* margin:49px auto; */
  z-index: 3;
  background-color: #000000;
  background-color: #000000;
  background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");
  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
}

.cssload-container *, .cssload-container *:before, .cssload-container *:after {
  box-sizing: border-box;
  -o-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.cssload-circle {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  border-radius: 50%;
  z-index: 1;
  transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transition: all 230ms ease;
  -o-transition: all 230ms ease;
  -ms-transition: all 230ms ease;
  -webkit-transition: all 230ms ease;
  -moz-transition: all 230ms ease;
}
/* ... */

